# prototype

./: README.md
c/matrix/: .gitignore  CMakeLists.txt  README.md  main.c  matrix.c  matrix.h
c/matrix/src/: CMakeLists.txt  README.md  main.c  matrix.c  matrix.h
c/matrix/src/include/: CMakeLists.txt  matrix.h
c/matrix/src/matrix/: CMakeLists.txt  matrix.c
c/matrix/src/mtrxdemo/: CMakeLists.txt
c/matrix/test/: CMakeLists.txt  matrix_test.c  matrix_test.h  unit_tests.c  unit_tests.cpp
go/delivery/: README.md  main.go
go/linalg/: matrix.go
go/wordcount/: main.go
js/fizzbuzz/: fizzbuzz.js
js/matrix/: matrix.js  matrix.test.js  package-lock.json  package.json
perl/matrix/: Matrix.pm  Matrix.t  Mtrx.pm  Mtrx.t  README.md  test.pl  tst.pl
perl/timestamp/: fixts.pl  fixts.sh
perl/wordcount/: resume_rod_doe.md  wc.pl
python/traffic/snoqpass/: main.py  snoqpass.py  snoqpass_test.py
python/wordcount/: main.py
